--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
-  "_comment": "KONFIGURACJA STEROWNIKA EKSPRESU DO KAWY BRAUN",
+  "_comment": "KONFIGURACJA STEROWNIKA HA_RGBW_MQTT_ESP8266",
   "version": "1.0",
   "author": "Paweł Zięba",
-  "date": "27.01.2021!!!!!!",
+  "date": "16.03.2021",
   "static_ip": "192.168.1.45",
   "mask_ip": "255.255.255.0",
   "gate_ip": "192.168.1.1",
   "dns_ip": "8.8.8.8",
-  "ssid": "bestconnect.pl 130",
-  "password": "pawel130",
+  "ssid": "",
+  "password": "",
   "mqtt_server": "192.168.1.110",
   "mqtt_port": "1883",
   "mqtt_user": "mqtt",
