--- a/config.json
+++ b/config.json
@@ -7,8 +7,8 @@
   "mask_ip": "255.255.255.0",
   "gate_ip": "192.168.1.1",
   "dns_ip": "8.8.8.8",
-  "ssid": "",
-  "password": "",
+  "ssid": "bestconnect.pl 130",
+  "password": "pawel130",
   "mqtt_server": "192.168.1.110",
   "mqtt_port": "1883",
   "mqtt_user": "mqtt",
@@ -22,6 +22,9 @@
   "topic_pub_rgb": "kitchen/light/rgb1/rgb/state",
   "topic_sub_white": "kitchen/light/rgb1/white/cmd",
   "topic_pub_white": "kitchen/light/rgb1/white/state",
+  "topic_sub_effect": "kitchen/light/rgb1/effect/cmd",
+  "topic_pub_effect": "kitchen/light/rgb1/effect/state",
+  "topic_pub_availability": "kitchen/light/rgb1/availability/state",
   "pin_R": "12",
   "pin_G": "4",
   "pin_B": "5",
