--- a/config.json
+++ b/config.json
@@ -3,15 +3,15 @@
   "version": "1.0",
   "author": "Paweł Zięba",
   "date": "16.03.2021",
-  "static_ip": "192.168.1.45",
+  "static_ip": "192.168.1.102",
   "mask_ip": "255.255.255.0",
   "gate_ip": "192.168.1.1",
   "dns_ip": "8.8.8.8",
   "ssid": "bestconnect.pl 130",
   "password": "pawel130",
-  "mqtt_server": "192.168.1.110",
+  "mqtt_server": "192.168.1.100",
   "mqtt_port": "1883",
-  "mqtt_user": "mqtt",
+  "mqtt_user": "mqtt_user",
   "mqtt_pass": "mqtt_pass",
   "client_id": "esp8266-rgb-dimmer-01",
   "topic_sub_state": "kitchen/light/rgb1/state/cmd",
